Production-Org-Metadata/force-app/main/default/objects/MVC_Internal_Asset__c/MVC_Internal_Asset__c.object-meta.xml
<CustomObject>
    <label>MVC Internal Asset</label>
    <nameField>
        <displayFormat>MVAST - {000000}</displayFormat>
        <label>MVC Internal Asset Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>MVC Internal Assets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>