Production-Org-Metadata/force-app/main/default/objects/MVC_Internal_Asset__c/fields/AMS_Asset_Serial_Number__c.field-meta.xml
<CustomField>
    <fullName>AMS_Asset_Serial_Number__c</fullName>
    <caseSensitive>true</caseSensitive>
    <label>AMS Asset Serial Number</label>
    <length>60</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>