Production-Org-Metadata/force-app/main/default/objects/MVC_Internal_Asset__c/fields/AMS_Assigned_To__c.field-meta.xml
<CustomField>
    <fullName>AMS_Assigned_To__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>AMS Assigned To</label>
    <referenceTo>Employee__c</referenceTo>
    <relationshipLabel>MVC Internal Assets</relationshipLabel>
    <relationshipName>MVC_Internal_Assets</relationshipName>
    <type>Lookup</type>
</CustomField>