Production-Org-Metadata/force-app/main/default/objects/MVC_Internal_Asset__c/fields/AMS_Category__c.field-meta.xml
<CustomField>
    <fullName>AMS_Category__c</fullName>
    <label>AMS Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Laptop</fullName>
            </value>
            <value>
                <fullName>CPU</fullName>
            </value>
            <value>
                <fullName>Connector</fullName>
            </value>
            <value>
                <fullName>Headphone</fullName>
            </value>
            <value>
                <fullName>HDMI Cable</fullName>
            </value>
            <value>
                <fullName>Keyboard</fullName>
            </value>
            <value>
                <fullName>Mouse</fullName>
            </value>
            <value>
                <fullName>External Storage</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>