Production-Org-Metadata/force-app/main/default/objects/MVC_Internal_Asset__c/fields/AMS_Product__c.field-meta.xml
<CustomField>
    <fullName>AMS_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>AMS Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>MVC Internal Assets</relationshipLabel>
    <relationshipName>MVC_Internal_Assets</relationshipName>
    <type>Lookup</type>
</CustomField>