Production-Org-Metadata/force-app/main/default/objects/MVC_Internal_Asset__c/fields/AMS_Purchase_Condition__c.field-meta.xml
<CustomField>
    <fullName>AMS_Purchase_Condition__c</fullName>
    <label>AMS Purchase Condition</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Second-hand</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>