Production-Org-Metadata/force-app/main/default/objects/MVC_Internal_Asset__c/fields/AMS_Purchase_Date__c.field-meta.xml
<CustomField>
    <fullName>AMS_Purchase_Date__c</fullName>
    <label>AMS Purchase Date</label>
    <type>Date</type>
</CustomField>