Production-Org-Metadata/force-app/main/default/objects/MVC_Internal_Asset__c/fields/AMS_Status_Formula__c.field-meta.xml
<CustomField>
    <fullName>AMS_Status_Formula__c</fullName>
    <formula>IMAGE(&quot;/resource/AMS_FORMULA_LABELS/&quot;+text(AMS_Status__c)+&quot;.png&quot;, text(AMS_Status__c), 30, 150)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AMS Status Formula</label>
    <type>Text</type>
</CustomField>