Production-Org-Metadata/force-app/main/default/objects/MVC_Internal_Asset__c/fields/AMS_Warranty_Expiry_Date__c.field-meta.xml
<CustomField>
    <fullName>AMS_Warranty_Expiry_Date__c</fullName>
    <label>AMS Warranty Expiry Date</label>
    <type>Date</type>
</CustomField>