Production-Org-Metadata/force-app/main/default/objects/MVC_Internal_Asset__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>AMS_Category__c</columns>
    <columns>AMS_Product__c</columns>
    <columns>AMS_Status__c</columns>
    <columns>AMS_Warranty_Expiry_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>